--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="feature__item">
         <div
           class="feature__image"
-          style="background-image: url('/images/1logo.png')">
+          style="background-image: url('images/1logo.png')">
         </div>
         
       </div>
