--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="feature__item">
         <div
           class="feature__image"
-          style="background-image: url('images/1logo.png')">
+          style="background-image: url('/images/1looogo.png')">
         </div>
         
       </div>
