--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <style>
     .hero {
     position: relative;
-        background-image: url(/images/hero1.png);
+        background-image: url('images/hero1.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
